added explore and fixed randomizer pages

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <script>
     </script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Random food game</title>
+    <title>bord.</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
